fix wofi flickering

--- a/.config/wofi/style.scss
+++ b/.config/wofi/style.scss
@@ -5,7 +5,7 @@ window {
     all: unset;
     margin: 0px;
     border: 2px solid $outline;
-    background-color: $background;
+    background-color: rgba($background, 0.85);
     border-radius: 1rem;
 }
 
